updated and added everything

--- a/system requirements specification LaTeX/tex/customer_requirements.tex
+++ b/system requirements specification LaTeX/tex/customer_requirements.tex
@@ -6,7 +6,7 @@ The laser harp must accurately detect when a laser string is interrupted (plucke
 \subsubsection{Source}
 Customer, CSE Senior Design project specifications
 \subsubsection{Constraints}
-- **Economic:**: The solution should be cost-effective, using commercially available components.
+Economic:: The solution should be cost-effective, using commercially available components.
 Environmental: Must operate reliably in indoor environments with variable lighting.
 Health & Safety: The lasers used must be safe for use around humans, adhering to Class 1 laser safety standards.
 Manufacturability: The system should be easy to assemble and maintain.
@@ -23,7 +23,7 @@ The laser harp must produce a sound corresponding to the interrupted laser strin
 \subsubsection{Source}
 Customer, CSE Senior Design project specifications
 \subsubsection{Constraints}
-- **Economic:**: Use of open-source libraries and cost-effective audio hardware.
+Economic:: Use of open-source libraries and cost-effective audio hardware.
 Environmental: Must function reliably in standard indoor environments.
 Health & Safety: Audio output should be within safe hearing levels
 \subsubsection{Standards}
@@ -39,7 +39,7 @@ The laser harp must be portable, allowing it to be easily transported and set up
 \subsubsection{Source}
 specified team member (Simon Aguirre)
 \subsubsection{Constraints}
-- **Economic:**: Materials used should balance cost and durability.
+Economic:: Materials used should balance cost and durability.
 Environmental: Device should withstand minor impacts and vibrations during transport.
 Health & Safety: Ensure safe handling and transport.
 \subsubsection{Standards}
@@ -54,7 +54,7 @@ The laser harp must operate on a rechargeable battery with a minimum of 4 hours 
 \subsubsection{Source}
 specified team member (Matthew Moran)
 \subsubsection{Constraints}
-- **Economic:**: Use cost-effective and safe rechargeable battery solutions.
+Economic:: Use cost-effective and safe rechargeable battery solutions.
 Environmental: Battery should be compliant with environmental regulations for disposal.
 Health & Safety: Battery must meet safety standards to prevent overheating and other hazards.
 \subsubsection{Standards}
@@ -69,7 +69,7 @@ The laser harp must include a user interface (UI) that allows users to calibrate
 \subsubsection{Source}
 specified team member (Matthew Moran)
 \subsubsection{Constraints}
-- **Economic:**: Development should utilize open-source UI frameworks.
+Economic:: Development should utilize open-source UI frameworks.
 Environmental: Must be usable in typical classroom and home settings.
 Social: The UI design should be inclusive and accessible to users with different needs.
 \subsubsection{Standards}
@@ -84,7 +84,7 @@ Future versions of the laser harp should include wireless connectivity options s
 \subsubsection{Source}
 None
 \subsubsection{Constraints}
-- **Economic:**: Ensure cost-effective implementation of wireless modules.
+Economic:: Ensure cost-effective implementation of wireless modules.
 Environmental: Reliable operation in typical indoor environments.
 Health & Safety: Adhere to wireless communication safety standards.
 \subsubsection{Standards}
