--- a/system requirements specification LaTeX/tex/maintenance_support_requirements.tex
+++ b/system requirements specification LaTeX/tex/maintenance_support_requirements.tex
@@ -7,7 +7,7 @@ The source code for the laser harp's software must be made available to the main
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: Secure storage and version control systems must be maintained to manage the source code.
+Economic:: Secure storage and version control systems must be maintained to manage the source code.
 Security: Access to the source code should be restricted to authorized personnel to prevent unauthorized changes or misuse.
 Documentation: The source code must be well-documented to ensure maintainers can understand and modify it as needed.
 \subsubsection{Standards}
@@ -22,9 +22,9 @@ Specific tools and equipment must be available for maintaining the laser harp. T
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: Budget for the procurement and maintenance of necessary tools.
+Economic:: Budget for the procurement and maintenance of necessary tools.
 Health & Safety: Ensure all maintenance tools meet safety standards to prevent accidents during use.
-- **Usability:**: Tools should be user-friendly and suitable for the technical skills of the maintenance personnel.
+Usability:: Tools should be user-friendly and suitable for the technical skills of the maintenance personnel.
 \subsubsection{Standards}
 OSHA Standards: Occupational Safety and Health Administration standards for tool safety.
 \subsubsection{Priority}
@@ -37,9 +37,9 @@ The maintenance of the laser harp's software requires specific development envir
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: Ensure that all necessary software licenses are obtained and maintained.
-- **Technical:**: The development environment must be compatible with the software components of the laser harp.
-- **Usability:**: The environment should be configured to facilitate easy development, testing, and deployment of updates.
+Economic:: Ensure that all necessary software licenses are obtained and maintained.
+Technical:: The development environment must be compatible with the software components of the laser harp.
+Usability:: The environment should be configured to facilitate easy development, testing, and deployment of updates.
 \subsubsection{Standards}
 IEEE 14764: Software Engineering - Software Life Cycle Processes - Maintenance.
 \subsubsection{Priority}
@@ -52,9 +52,9 @@ Comprehensive maintenance documentation must be provided to guide users and supp
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: The creation and upkeep of detailed documentation must be budgeted for, including potential updates as the product evolves.
-- **Technical:**: Documentation must be thorough and accessible, using clear language and visuals to aid understanding.
-- **Usability:**: Documentation should be designed to be user-friendly, ensuring that users of varying technical skill levels can effectively use and maintain the product.
+Economic:: The creation and upkeep of detailed documentation must be budgeted for, including potential updates as the product evolves.
+Technical:: Documentation must be thorough and accessible, using clear language and visuals to aid understanding.
+Usability:: Documentation should be designed to be user-friendly, ensuring that users of varying technical skill levels can effectively use and maintain the product.
 \subsubsection{Standards}
 ISO/IEC 26514: Systems and software engineering — Requirements for designers and developers of user documentation.
 \subsubsection{Priority}
@@ -67,9 +67,9 @@ A dedicated support team must be available to provide technical assistance to us
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Economic:**: Budget for hiring and training support personnel.
-- **Technical:**: Support personnel must have a deep understanding of the laser harp's components and software.
-- **Usability:**: Support services should be easily accessible to users, with multiple contact methods available (e.g., phone, email, online chat).
+Economic:: Budget for hiring and training support personnel.
+Technical:: Support personnel must have a deep understanding of the laser harp's components and software.
+Usability:: Support services should be easily accessible to users, with multiple contact methods available (e.g., phone, email, online chat).
 \subsubsection{Standards}
 ISO 20000: Information technology — Service management.
 \subsubsection{Priority}
