--- a/system requirements specification LaTeX/tex/other_requirements.tex
+++ b/system requirements specification LaTeX/tex/other_requirements.tex
@@ -7,9 +7,9 @@ The laser harp must undergo rigorous testing and quality assurance processes to 
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: Allocate sufficient budget for comprehensive testing procedures.
-- **Technical:**: Utilize appropriate testing frameworks and tools.
-- **Usability:**: Testing processes should simulate real-world usage scenarios.
+Economic:: Allocate sufficient budget for comprehensive testing procedures.
+Technical:: Utilize appropriate testing frameworks and tools.
+Usability:: Testing processes should simulate real-world usage scenarios.
 \subsubsection{Standards}
 ISO/IEC/IEEE 29119: Software Testing standards.
 \subsubsection{Priority}
@@ -22,11 +22,11 @@ The laser harp must include a straightforward setup and configuration process fo
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Economic:**: The setup process should not require expensive tools or components.
-- **Usability:**: Instructions must be clear and accessible to users of varying technical skill levels.
+Economic:: The setup process should not require expensive tools or components.
+Usability:: Instructions must be clear and accessible to users of varying technical skill levels.
 Time: Setup should be quick, ideally taking no more than 30 minutes.
 \subsubsection{Standards}
-ISO 9241-11: Ergonomics of human-system interaction – Part 11: - **Usability:**: Definitions and concepts.
+ISO 9241-11: Ergonomics of human-system interaction – Part 11: Usability:: Definitions and concepts.
 \subsubsection{Priority}
 High
 
@@ -37,9 +37,9 @@ The software and hardware architecture of the laser harp must be extensible to a
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: Extensibility should not significantly increase initial development costs.
-- **Technical:**: The system architecture must be designed to support easy integration of new features.
-- **Usability:**: New features should be easily accessible to end users.
+Economic:: Extensibility should not significantly increase initial development costs.
+Technical:: The system architecture must be designed to support easy integration of new features.
+Usability:: New features should be easily accessible to end users.
 \subsubsection{Standards}
 IEEE 14764: Software Engineering – Software Life Cycle Processes – Maintenance.
 \subsubsection{Priority}
@@ -52,9 +52,9 @@ The design of the laser harp must be modular, allowing for easy replacement or u
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:**: Modular design should not significantly increase the cost of the product.
-- **Technical:**: Modules must be easily interchangeable and compatible with the overall system.
-- **Usability:**: Users should be able to replace or upgrade modules without specialized technical knowledge.
+Economic:: Modular design should not significantly increase the cost of the product.
+Technical:: Modules must be easily interchangeable and compatible with the overall system.
+Usability:: Users should be able to replace or upgrade modules without specialized technical knowledge.
 \subsubsection{Standards}
 IEC 61131-3: Programmable controllers – Part 3: Programming languages.
 \subsubsection{Priority}
@@ -67,9 +67,9 @@ The software for the laser harp must be portable across various platforms, inclu
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Economic:**: Development and testing across multiple platforms should be budgeted for.
-- **Technical:**: The software must be compatible with different operating systems and their respective libraries.
-- **Usability:**: The user experience should be consistent across all supported platforms.
+Economic:: Development and testing across multiple platforms should be budgeted for.
+Technical:: The software must be compatible with different operating systems and their respective libraries.
+Usability:: The user experience should be consistent across all supported platforms.
 \subsubsection{Standards}
 IEEE 1003.1: POSIX standard for portability.
 \subsubsection{Priority}
