--- a/system requirements specification LaTeX/tex/packaging_requirements.tex
+++ b/system requirements specification LaTeX/tex/packaging_requirements.tex
@@ -9,9 +9,9 @@ The software required for the operation of the laser harp must be pre-loaded ont
 \subsubsection{Source}
 Development Team, Customer
 \subsubsection{Constraints}
-- **Economic:** Pre-loading software reduces the need for end-user installation support, lowering post-sale support costs.
-- **Technical:** The software must be thoroughly tested to ensure it works out-of-the-box.
-- **Usability:** Ensures a seamless user experience by reducing setup complexity.
+Economic: Pre-loading software reduces the need for end-user installation support, lowering post-sale support costs.
+Technical: The software must be thoroughly tested to ensure it works out-of-the-box.
+Usability: Ensures a seamless user experience by reducing setup complexity.
 \subsubsection{Standards}
 ISO/IEC 25010: Systems and software Quality Requirements and Evaluation (SQuaRE) - System and software quality models.
 \subsubsection{Priority}
@@ -24,9 +24,9 @@ All hardware components of the laser harp must be delivered in a single package.
 \subsubsection{Source}
 Customer, Sponsor
 \subsubsection{Constraints}
-- **Economic:** Consolidating packaging reduces shipping costs and potential damage during transport.
-- **Environmental:** Packaging materials should be recyclable to minimize environmental impact.
-- **Health & Safety:** Packaging must protect the components from damage during shipping and handling.
+Economic: Consolidating packaging reduces shipping costs and potential damage during transport.
+Environmental: Packaging materials should be recyclable to minimize environmental impact.
+Health & Safety: Packaging must protect the components from damage during shipping and handling.
 \subsubsection{Standards}
 ISO 11607-1: Packaging for terminally sterilized medical devices - Requirements for materials, sterile barrier systems, and packaging systems.
 \subsubsection{Priority}
@@ -39,8 +39,8 @@ The package must include customer support information, such as a toll-free suppo
 \subsubsection{Source}
 Customer, Sponsor
 \subsubsection{Constraints}
-- **Economic:** Including support information helps reduce the need for returns and enhances customer satisfaction.
-- **Usability:** Information must be easy to find and clearly printed in the user manual.
+Economic: Including support information helps reduce the need for returns and enhances customer satisfaction.
+Usability: Information must be easy to find and clearly printed in the user manual.
 \subsubsection{Standards}
 ISO 10002 Quality management - Customer satisfaction - Guidelines for complaints handling in organizations.
 \subsubsection{Priority}
@@ -53,9 +53,9 @@ Some components of the laser harp, such as the frame and the laser modules, will
 \subsubsection{Source}
 Development Team
 \subsubsection{Constraints}
-- **Economic:** User assembly reduces manufacturing and shipping costs.
-- **Usability:** Instructions must be clear and easy to follow, with diagrams and step-by-step guidance.
-- **Health & Safety:** Assembly instructions must include safety warnings and precautions.
+Economic: User assembly reduces manufacturing and shipping costs.
+Usability: Instructions must be clear and easy to follow, with diagrams and step-by-step guidance.
+Health & Safety: Assembly instructions must include safety warnings and precautions.
 \subsubsection{Standards}
 ISO 7000 Graphical symbols for use on equipment - Registered symbols.
 \subsubsection{Priority}
@@ -68,9 +68,9 @@ The laser harp must feature the company logo and branding. The main unit should 
 \subsubsection{Source}
 Sponsor
 \subsubsection{Constraints}
-- **Economic:** Branding should not significantly increase manufacturing costs.
-- **Usability:** The branding should not obscure any functional parts of the device.
-- **Aesthetics:** The device should have a professional and attractive appearance to enhance customer satisfaction.
+Economic: Branding should not significantly increase manufacturing costs.
+Usability: The branding should not obscure any functional parts of the device.
+Aesthetics: The device should have a professional and attractive appearance to enhance customer satisfaction.
 \subsubsection{Standards}
 ISO 3864-1: Graphical symbols - Safety colors and safety signs.
 \subsubsection{Priority}
