--- a/system requirements specification LaTeX/tex/performance_requirements.tex
+++ b/system requirements specification LaTeX/tex/performance_requirements.tex
@@ -8,8 +8,8 @@ The laser harp must produce sound within 50 milliseconds of a laser string being
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Technical:** The system must have low-latency processing capabilities to ensure immediate sound playback.
-- **Economic:** Use of efficient processing hardware to balance performance and cost.
+Technical: The system must have low-latency processing capabilities to ensure immediate sound playback.
+Economic: Use of efficient processing hardware to balance performance and cost.
 \subsubsection{Standards}
 MIDI Standard Musical Instrument Digital Interface for real-time performance.
 \subsubsection{Priority}
@@ -22,9 +22,9 @@ The laser harp must have a battery life of at least 4 hours of continuous use. I
 \subsubsection{Source}
 Customer, Sponsor
 \subsubsection{Constraints}
-- **Economic:** Use of cost-effective, high-capacity batteries.
-- **Environmental:** Batteries must be compliant with environmental regulations for disposal.
-- **Health & Safety:** Battery must meet safety standards to prevent overheating and other hazards.
+Economic: Use of cost-effective, high-capacity batteries.
+Environmental: Batteries must be compliant with environmental regulations for disposal.
+Health & Safety: Battery must meet safety standards to prevent overheating and other hazards.
 \subsubsection{Standards}
 IEC 62133-2:2017 Safety requirements for portable sealed secondary cells and batteries.
 \subsubsection{Priority}
@@ -37,8 +37,8 @@ The laser harp must be ready for use within 30 seconds of being powered on. This
 \subsubsection{Source}
 Customer, Sponsor
 \subsubsection{Constraints}
-- **Technical:** Efficient boot and initialization processes must be implemented.
-- **Economic:** Optimize hardware and software to reduce startup time without significant cost increases.
+Technical: Efficient boot and initialization processes must be implemented.
+Economic: Optimize hardware and software to reduce startup time without significant cost increases.
 \subsubsection{Standards}
 ISO/IEC 24748-4 Systems and software engineering - Life cycle management - Part 4: System and software test and evaluation.
 \subsubsection{Priority}
@@ -51,8 +51,8 @@ The sound produced by the laser harp must have a sample rate of at least 44.1 kH
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Technical:** Use of high-quality audio libraries and components to meet sound quality requirements.
-- **Economic:** Balance between cost and audio quality components.
+Technical: Use of high-quality audio libraries and components to meet sound quality requirements.
+Economic: Balance between cost and audio quality components.
 \subsubsection{Standards}
 IEC 60958 Digital audio interface - Consumer and professional equipment.
 \subsubsection{Priority}
@@ -65,8 +65,8 @@ The calibration process for the laser strings must achieve an accuracy of within
 \subsubsection{Source}
 Customer, Sponsor
 \subsubsection{Constraints}
-- **Technical:** High-precision sensors and calibration algorithms must be used.
-- **Economic:** Ensure affordability of high-precision components.
+Technical: High-precision sensors and calibration algorithms must be used.
+Economic: Ensure affordability of high-precision components.
 \subsubsection{Standards}
 ISO 9283 Manipulating industrial robots - Performance criteria and related test methods.
 \subsubsection{Priority}
@@ -79,8 +79,8 @@ The laser harp must be fully set up and operational within 30 minutes. This incl
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Economic:** Components should be designed for easy and quick assembly.
-- **Usability:** Instructions must be clear and easy to follow to ensure quick setup.
+Economic: Components should be designed for easy and quick assembly.
+Usability: Instructions must be clear and easy to follow to ensure quick setup.
 \subsubsection{Standards}
 ISO 9241-11 Ergonomics of human-system interaction – Part 11: Usability: Definitions and concepts.
 \subsubsection{Priority}
