--- a/system requirements specification LaTeX/tex/safety_requirements.tex
+++ b/system requirements specification LaTeX/tex/safety_requirements.tex
@@ -1,37 +1,75 @@
-Include a header paragraph specific to your product here. Safety requirements might address items specific to your product such as: no exposure to toxic chemicals; lack of sharp edges that could harm a user; no breakable glass in the enclosure; no direct eye exposure to infrared/laser beams; packaging/grounding of electrical connections to avoid shock; etc.
+\section{Safety Requirements}
 
-\subsection{Laboratory equipment lockout/tagout (LOTO) procedures}
+The safety requirements for the laser harp project ensure that the product is safe for use and minimizes any potential hazards. These requirements address various safety aspects such as avoiding exposure to harmful components, ensuring safe handling of electrical connections, and implementing procedures to prevent accidents during the development and use of the product.
+
+\subsection{Laboratory Equipment Lockout/Tagout (LOTO) Procedures}
 \subsubsection{Description}
-Any fabrication equipment provided used in the development of the project shall be used in accordance with OSHA standard LOTO procedures. Locks and tags are installed on all equipment items that present use hazards, and ONLY the course instructor or designated teaching assistants may remove a lock. All locks will be immediately replaced once the equipment is no longer in use.
+Any fabrication equipment used in the development of the project shall be operated in accordance with OSHA standard LOTO procedures. Locks and tags are installed on all equipment items that present use hazards, and only the course instructor or designated teaching assistants may remove a lock. All locks will be immediately replaced once the equipment is no longer in use.
 \subsubsection{Source}
 CSE Senior Design laboratory policy
 \subsubsection{Constraints}
-Equipment usage, due to lock removal policies, will be limited to availability of the course instructor and designed teaching assistants.
+Equipment usage, due to lock removal policies, will be limited to the availability of the course instructor and designated teaching assistants.
 \subsubsection{Standards}
 Occupational Safety and Health Standards 1910.147 - The control of hazardous energy (lockout/tagout).
 \subsubsection{Priority}
 Critical
 
-\subsection{National Electric Code (NEC) wiring compliance}
+\subsection{National Electric Code (NEC) Wiring Compliance}
 \subsubsection{Description}
-Any electrical wiring must be completed in compliance with all requirements specified in the National Electric Code. This includes wire runs, insulation, grounding, enclosures, over-current protection, and all other specifications.
+Any electrical wiring must comply with all requirements specified in the National Electric Code. This includes wire runs, insulation, grounding, enclosures, over-current protection, and all other specifications.
 \subsubsection{Source}
 CSE Senior Design laboratory policy
 \subsubsection{Constraints}
-High voltage power sources, as defined in NFPA 70, will be avoided as much as possible in order to minimize potential hazards.
+High voltage power sources, as defined in NFPA 70, will be avoided as much as possible to minimize potential hazards.
 \subsubsection{Standards}
 NFPA 70
 \subsubsection{Priority}
 Critical
 
-\subsection{RIA robotic manipulator safety standards}
+\subsection{No Direct Eye Exposure to Lasers}
 \subsubsection{Description}
-Robotic manipulators, if used, will either housed in a compliant lockout cell with all required safety interlocks, or certified as a "collaborative" unit from the manufacturer.
+The laser harp must be designed to prevent any direct eye exposure to laser beams. Class 1 lasers, which are safe under all conditions of normal use, will be used to ensure user safety.
 \subsubsection{Source}
-CSE Senior Design laboratory policy
+Development Team
 \subsubsection{Constraints}
-Collaborative robotic manipulators will be preferred over non-collaborative units in order to minimize potential hazards. Sourcing and use of any required safety interlock mechanisms will be the responsibility of the engineering team.
+Ensure all laser components are securely mounted and aligned to prevent accidental exposure. Safety warnings and guidelines must be included in the user manual.
 \subsubsection{Standards}
-ANSI/RIA R15.06-2012 American National Standard for Industrial Robots and Robot Systems, RIA TR15.606-2016 Collaborative Robots
+IEC 60825-1:2014 Safety of Laser Products
 \subsubsection{Priority}
 Critical
+
+\subsection{Grounding of Electrical Connections}
+\subsubsection{Description}
+All electrical connections within the laser harp must be properly grounded to avoid any risk of electrical shock. This includes ensuring all exposed metal parts are connected to a common ground point.
+\subsubsection{Source}
+Development Team
+\subsubsection{Constraints}
+All electrical components must be installed in accordance with grounding best practices. Regular inspections should be performed to ensure grounding integrity.
+\subsubsection{Standards}
+IEC 60364-5-54:2011 Low-voltage electrical installations - Part 5-54: Selection and erection of electrical equipment - Earthing arrangements and protective conductors
+\subsubsection{Priority}
+High
+
+\subsection{Use of Non-Toxic Materials}
+\subsubsection{Description}
+All materials used in the construction of the laser harp must be non-toxic and safe for handling. This includes avoiding the use of hazardous chemicals and ensuring that all parts are free from sharp edges.
+\subsubsection{Source}
+Development Team, Customer
+\subsubsection{Constraints}
+Materials must comply with safety regulations and standards for non-toxicity. The use of environmentally friendly materials is encouraged.
+\subsubsection{Standards}
+REACH Regulation (EC) No 1907/2006 concerning the Registration, Evaluation, Authorisation and Restriction of Chemicals
+\subsubsection{Priority}
+High
+
+\subsection{Packaging of Electrical Components}
+\subsubsection{Description}
+All electrical components must be securely packaged to prevent damage during shipping and handling. This includes using appropriate insulation and ensuring that components are protected from moisture and impact.
+\subsubsection{Source}
+Development Team
+\subsubsection{Constraints}
+Packaging materials must be chosen to provide adequate protection while being cost-effective. The use of recyclable packaging is preferred.
+\subsubsection{Standards}
+IEC 60215:2016 Safety requirements for radio transmitting equipment
+\subsubsection{Priority}
+Moderate
