--- a/system requirements specification LaTeX/tex/future_items.tex
+++ b/system requirements specification LaTeX/tex/future_items.tex
@@ -4,7 +4,7 @@ Future versions of the laser harp should include wireless connectivity options s
 \subsubsection{Source}
 None
 \subsubsection{Constraints}
-- **Economic:**: Ensure cost-effective implementation of wireless modules.
+Economic:: Ensure cost-effective implementation of wireless modules.
 Environmental: Reliable operation in typical indoor environments.
 Health & Safety: Adhere to wireless communication safety standards.
 \subsubsection{Standards}
@@ -20,10 +20,10 @@ The package must include customer support information, such as a toll-free suppo
 \subsubsection{Source}
 Customer, Sponsor
 \subsubsection{Constraints}
-- **Economic:** Including support information helps reduce the need for returns and enhances customer satisfaction.
-- **Usability:** Information must be easy to find and clearly printed in the user manual.
+Economic: Including support information helps reduce the need for returns and enhances customer satisfaction.
+Usability: Information must be easy to find and clearly printed in the user manual.
 \subsubsection{Standards}
-- **ISO 10002:** Quality management - Customer satisfaction - Guidelines for complaints handling in organizations.
+ISO 10002: Quality management - Customer satisfaction - Guidelines for complaints handling in organizations.
 \subsubsection{Priority}
 Moderate/Future
 
@@ -33,9 +33,9 @@ Moderate/Future
 A dedicated support team must be available to provide technical assistance to users. This team should be trained in the operation and maintenance of the laser harp and capable of addressing common issues.
 \subsubsection{Source}
 Customer, Development Team
-\subsubsection{Constraints}- **Economic:**: Budget for hiring and training support personnel.
-- **Technical:**: Support personnel must have a deep understanding of the laser harp's components and software.
-- **Usability:**: Support services should be easily accessible to users, with multiple contact methods available (e.g., phone, email, online chat).
+\subsubsection{Constraints}Economic:: Budget for hiring and training support personnel.
+Technical:: Support personnel must have a deep understanding of the laser harp's components and software.
+Usability:: Support services should be easily accessible to users, with multiple contact methods available (e.g., phone, email, online chat).
 \subsubsection{Standards}
 ISO 20000: Information technology — Service management.
 \subsubsection{Priority}
@@ -48,9 +48,9 @@ The software for the laser harp must be portable across various platforms, inclu
 \subsubsection{Source}
 Customer, Development Team
 \subsubsection{Constraints}
-- **Economic:**: Development and testing across multiple platforms should be budgeted for.
-- **Technical:**: The software must be compatible with different operating systems and their respective libraries.
-- **Usability:**: The user experience should be consistent across all supported platforms.
+Economic:: Development and testing across multiple platforms should be budgeted for.
+Technical:: The software must be compatible with different operating systems and their respective libraries.
+Usability:: The user experience should be consistent across all supported platforms.
 \subsubsection{Standards}
 IEEE 1003.1: POSIX standard for portability.
 \subsubsection{Priority}
