Added logo and checked all formatting

--- a/system requirements specification LaTeX/system_requirements_specification.tex
+++ b/system requirements specification LaTeX/system_requirements_specification.tex
@@ -26,14 +26,14 @@
 
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
-\newcommand{\teamname}{Team Name}
-\newcommand{\productname}{Product Name}
+\newcommand{\teamname}{SegFault}
+\newcommand{\productname}{Laser Harp}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
-\newcommand{\semester}{Fall 2021}
+\newcommand{\semester}{Summer 2024}
 \newcommand{\docname}{System Requirements Specification}
 \newcommand{\department}{Department of Computer Science \& Engineering}
 \newcommand{\university}{The University of Texas at Arlington}
-\newcommand{\authors}{Alan Turing \\ Grace Hopper \\ John Von Neumann \\ Ada Lovelace \\ Charles Babbage}
+\newcommand{\authors}{Simon Aguirre \\ Matthew Moran \\ Thomas Pinkney \\ Alex Tran}
 
 %%% Headers and footers
 \usepackage{fancyhdr}
@@ -69,11 +69,11 @@
 \vspace{0.5 in}
 \begin{figure}[h!]
 	\centering
-   	\includegraphics[width=0.60\textwidth]{images/test_image}
+   	\includegraphics[width=0.50\textwidth]{images/Logo.png}
 \end{figure}
-\vspace{0.5 in}
+\vspace{0.4 in}
 {\centering \huge \color{accentcolor} \sc \textbf{\teamname \\ \productname} \par}
-\vspace{0.5 in}
+\vspace{0.25 in}
 {\centering \large \sc \textbf{\authors} \par}
 \newpage
 
@@ -132,10 +132,5 @@
 \section{Future Items}
 \input{tex/future_items}
 \newpage
-
-%%% References
-\bibliographystyle{plain}
-\bibliographystyle{reference/IEEEtran_custom}
-\bibliography{reference/refs}{}
 
 \end{document}
