--- a/system requirements specification LaTeX/tex/product_description.tex
+++ b/system requirements specification LaTeX/tex/product_description.tex
@@ -24,8 +24,8 @@ The laser harp interacts with external inputs and outputs as described below. Th
 \begin{tabular}{|c|c|c|}
 \hline
 \textbf{Name} & \textbf{Description} & \textbf{Use} \\ \hline
-Laser Interruption & Signal from phototransistors when a laser beam is interrupted & Detects user interaction to produce sound \\ \hline
-User Input & Commands from the user interface for calibration, volume control, etc. & Configures the system settings \\ \hline
+Laser Interruption & Signal when a laser beam is interrupted & Detects user interaction to produce sound \\ \hline
+User Input & Commands from the UI & Configures the system settings \\ \hline
 Audio Output & Sound signals sent to the speakers & Produces musical notes \\ \hline
 Power Supply & Electrical power input & Powers the system components \\ \hline
 \end{tabular}
