Updated customer tex due to :: issue

--- a/system requirements specification LaTeX/tex/customer_requirements.tex
+++ b/system requirements specification LaTeX/tex/customer_requirements.tex
@@ -23,7 +23,7 @@ The laser harp must produce a sound corresponding to the interrupted laser strin
 \subsubsection{Source}
 Customer, CSE Senior Design project specifications
 \subsubsection{Constraints}
-Economic:: Use of open-source libraries and cost-effective audio hardware.
+Economic: Use of open-source libraries and cost-effective audio hardware.
 Environmental: Must function reliably in standard indoor environments.
 Health & Safety: Audio output should be within safe hearing levels
 \subsubsection{Standards}
