found another double ::

--- a/system requirements specification LaTeX/tex/customer_requirements.tex
+++ b/system requirements specification LaTeX/tex/customer_requirements.tex
@@ -54,7 +54,7 @@ The laser harp must operate on a rechargeable battery with a minimum of 4 hours 
 \subsubsection{Source}
 specified team member (Matthew Moran)
 \subsubsection{Constraints}
-Economic:: Use cost-effective and safe rechargeable battery solutions.
+Economic: Use cost-effective and safe rechargeable battery solutions.
 Environmental: Battery should be compliant with environmental regulations for disposal.
 Health & Safety: Battery must meet safety standards to prevent overheating and other hazards.
 \subsubsection{Standards}
