fixed some grammer issues added new spaces for constraints for formating

--- a/system requirements specification LaTeX/tex/customer_requirements.tex
+++ b/system requirements specification LaTeX/tex/customer_requirements.tex
@@ -23,9 +23,9 @@ The laser harp must produce a sound corresponding to the interrupted laser strin
 \subsubsection{Source}
 Customer, CSE Senior Design project specifications
 \subsubsection{Constraints}
-Economic: Use of open-source libraries and cost-effective audio hardware.
-Environmental: Must function reliably in standard indoor environments.
-Health & Safety: Audio output should be within safe hearing levels
+Economic: Use cost-effective and safe rechargeable battery solutions.\\
+Environmental: Battery should be compliant with environmental regulations for disposal.\\
+Health \& Safety: Battery must meet safety standards to prevent overheating and other hazards.
 \subsubsection{Standards}
 WAV File Format Specification
 OpenAL Standard for Audio Playback
@@ -69,7 +69,7 @@ The laser harp must include a user interface (UI) that allows users to calibrate
 \subsubsection{Source}
 specified team member (Matthew Moran)
 \subsubsection{Constraints}
-Economic:: Development should utilize open-source UI frameworks.
+Economic: Development should utilize open-source UI frameworks.
 Environmental: Must be usable in typical classroom and home settings.
 Social: The UI design should be inclusive and accessible to users with different needs.
 \subsubsection{Standards}
@@ -84,7 +84,7 @@ Future versions of the laser harp should include wireless connectivity options s
 \subsubsection{Source}
 None
 \subsubsection{Constraints}
-Economic:: Ensure cost-effective implementation of wireless modules.
+Economic: Ensure cost-effective implementation of wireless modules.
 Environmental: Reliable operation in typical indoor environments.
 Health & Safety: Adhere to wireless communication safety standards.
 \subsubsection{Standards}
